[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-mqtt"
dynamic = ["version"]
description = 'A Textual wrapper for Paho MQTT library'
readme = "README.md"
requires-python = ">=3.8.1"
license = "MIT"
keywords = []
authors = [
  { name = "Mariano Renzi", email = "mariano@renzi.com.ar" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "textual",
  "paho-mqtt",
]

[project.urls]
Documentation = "https://github.com/marianorenzi/textual-mqtt#readme"
Issues = "https://github.com/marianorenzi/textual-mqtt/issues"
Source = "https://github.com/marianorenzi/textual-mqtt"

[tool.hatch.version]
path = "src/textual_mqtt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/textual_mqtt tests}"

[tool.coverage.run]
source_pkgs = ["textual_mqtt", "tests"]
branch = true
parallel = true
omit = [
  "src/textual_mqtt/__about__.py",
]

[tool.coverage.paths]
textual_mqtt = ["src/textual_mqtt", "*/textual-mqtt/src/textual_mqtt"]
tests = ["tests", "*/textual-mqtt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
